fixed the left alignment of drop down menu and fixed the chat section responsiveness for tablet devices

--- a/front-end/src/css/Home.css
+++ b/front-end/src/css/Home.css
@@ -24,8 +24,9 @@
 }
 
 .topBody img {
-  width: clamp(40%, 50%, 100%);
+  width: clamp(40vw, 50vw, 100vw);
   margin-top: -30px;
+  z-index: -100;
 }
 
 .hero-text {
@@ -166,7 +167,7 @@
 
 @media (max-width: 992px) {
   .topBody {
-    margin-top: 10px;
+    margin-top: 100px;
     flex-direction: column;
   }
   .hero-text {
@@ -176,6 +177,10 @@
 
   .modelSection {
     grid-template-columns: 1fr 2fr;
+  }
+
+  .wave-img {
+    bottom: 0px !important;
   }
 }
 
