--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -4,6 +4,12 @@
     padding: 0;
 }
 
+ul {
+    padding: 0; 
+    list-style: none;
+    margin: 0;
+}
+
 body::-webkit-scrollbar {
     width: 8px;
     background-color: transparent;
